@@ -1,6 +1,7 @@
 2007-09-24 seletz <stefan.eletzhofer@inquant.de>
     * hacked date/time parsing as DateTime() apparently
 	  does not parse EDT
+	* munge titles and summaries to remove XML entities
 
 2007-08-26 seletz <stefan.eletzhofer@inquant.de>
 	* created branch for adding plone 3.0 fixes
